// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Components should render correctly 1`] = `
<button
  className="Button Submit"
>
  Submit
</button>
`;

exports[`Auth Components simulate onClick handler 1`] = `
<button
  className="Button Submit"
  onClick={[MockFunction]}
>
  Submit
</button>
`;
